--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Bustle-ish</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="libs/jquery-1.10.2.js"></script>
     <script src="libs/ember-1.10.0.debug.js"></script>
     <script src="libs/ember-template-compiler-1.10.0.js"></script>
