--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="router.js"></script>
 
     <script>EmberHandlebarsLoader.loadTemplates(
-      ['headlines', 'application']);</script>
+      ['headlines', 'application','1-Cords-Are-A-Health-Hazard']);
+    </script>
   </head>
   <body>
 
