--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script src="router.js"></script>
 
     <script>EmberHandlebarsLoader.loadTemplates(
-      ['headlines', 'application','1-Cords-Are-A-Health-Hazard']);
+      ['headlines', 'application','1-Cords-Are-A-Health-Hazard',
+        '2-I-Know-Nothing-About-Fashion', '3-Trouble-In-Middle-East',
+        '4-Yellow-Shirt-People']);
     </script>
   </head>
   <body>
