Add refs to styles.css, bootstrap js script file and ApplicationController.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="libs/jquery-1.10.2.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="libs/ember-1.10.0.debug.js"></script>
     <script src="libs/ember-template-compiler-1.10.0.js"></script>
     <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
     <script src="bustle.js"></script>
     <script src="router.js"></script>
+    <script src="controllers/application.js"></script>
 
     <script>EmberHandlebarsLoader.loadTemplates(
       ['headlines', 'application','1-Cords-Are-A-Health-Hazard',
